--- a/index.html
+++ b/index.html
@@ -1,64 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>OdinForm</title>
-        <link rel="stylesheet" type="text/css" href="styles.css" />
-    </head>
 
-    <body>
-        <section class="left-section">
-            <figure class="img">
-                <img src="/img/photo-1585202900225-6d3ac20a6962.avif" alt="">
-                <figcaption class="odin-logo-container">
-                    <img src="/img/odin-lined.png">
-                </figcaption>
-            </figure>
-        </section>
-        <section class="right-section">
-            <div class="header-section">
-                <header>
-                    <p class="first-para">Lorem ipsum dolor sit Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto assumenda repudiandae consequatur recusandae ipsa quos.</p>
-                    <p class="second-para">Lorem ipsum dolor sit amet.</p> 
-                </header>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OdinForm</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <script src="./script.js"></script>
+</head>
+
+<body>
+    <div class="content">
+        <div class="picture">
+            <div class="logo"></div>
+        </div>
+        <div class="right">
+            <div class="dummy-text left">
+                <p>This is not a real service! elit. Cum autem nesciunt, beatae laudantium, quia
+                    voluptates eum voluptate amet quam sunt corrupti</p>
+                <p>Sign up <em>now</em> to get started.</p>
+                <p class="remote-text">You <em>know</em> you want to.</p>
             </div>
-            <div class="form-section">
-                <form class="project-form" action="" method="post" id="myForm">
-                        <div class="form-row">
-                            <label for="first-name">FIRST NAME</label>
-                            <input type="text" id="first-name" name="first-name">
-                        </div>
-                        <div class="form-row">
-                            <label for="last-name" name="last-name">LAST NAME</label>
-                            <input type="text" id="last-name">
-                        </div>
-                        <div class="form-row">
-                            <label for="email" name="email">EMAIL</label>
-                            <input type="email" id="email">
-                        </div>
-                        <div class="form-row">
-                            <label for="phone-number" name="phone-number">PHONE NUMBER</label>
-                            <input type="tel" id="phone number">
-                        </div>
-                        <div class="form-row">
-                            <label for="pwd" name="pwd">PASSWORD</label>
-                            <input type="password" id="pwd">
-                        </div>
-                        <div class="form-row">
-                            <label for="confirm-pwd" name="confirm-pwd">CONFRIM PASSWORD</label>
-                            <input type="text" id="confirm-pwd">
-                        </div>
-                </form>
+            <form action="#" id="form">
+                <div class="form left">
+                    <p class="form-title">Let's do this!</p>
+                    <div class="form-row">
+                        <label for="f_name">first name</label>
+                        <input type="text" id="f_name" name="f_name" required>
+                    </div>
+                    <div class="form-row">
+                        <label for="l_name">last name</label>
+                        <input type="text" id="l_name" name="l_name" required>
+                    </div>
+                    <div class="form-row">
+                        <label for="email">email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-row">
+                        <label for="phone_number">phone number</label>
+                        <input type="tel" name="phone_number" id="phone_number" required>
+                    </div>
+                    <div class="form-row">
+                        <label for="pwd">password</label>
+                        <input type="password"
+                               name="pwd" 
+                               class="pwd invalid"
+                               id="pwd" 
+                               required
+                               pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" 
+                               title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" 
+                               required
+                        >
+                    </div>
+                    <div class="form-row">
+                        <label for="pwd_confirm">confirm password</label>
+                        <input type="password"
+                               class="pwd-confirm invalid"
+                               name="pwd_confirm" 
+                               id="pwd_confirm" 
+                               required
+                        >
+                    </div>
+                </div>
+            </form>
+            <div class="btn-container left">
+                <button class="btn" type="submit" form="form">Create Account</button>
             </div>
-            <input class="myButton" type="submit" form="myform" value="Update"/>
+            <div class="login left">
+                <p>Already have an account?</p>
+                <a class="anchor" href="#">Log in</a>
+            </div>
+        </div>
 
-            <p class="login">Already have an account? <a class="login-link" href="/index.html">Login</a></p>
-        </section>
+    </div>
+    </div>
 
 
-    </body>
+</body>
 
 
 
